--- a/jsys.css
+++ b/jsys.css
@@ -79,7 +79,7 @@ input[type=text]:focus, input[type=password]:focus, textarea:focus {
 	outline: none;
 }
 input[type=text].search-box {
-	border-radius: 1em;
+	border-radius: 2em;
 	padding-left: 25px;
 	background: url(/img/search.png) no-repeat 5px center, #fff;
 }
@@ -286,9 +286,12 @@ table.ftbl.fld>tbody>tr>td { padding: 2px; }
 }
 .big-form input[type=text], .big-form input[type=password], .big-form textarea {
 	font-size: 20px;
-	padding: 5px 7px;
+	padding: 6px 8px;
 	border-radius: 6px;
 	width: 100%;
 }
 .big-form select { width: 100%; }
-
+.big-form input[type=text].search-box {
+	border-radius: 2em;
+	padding-left: 25px;
+}
